# Litf-IR

./: CAPABILITIES.md  Cargo.toml  DIALECTS.md  LICENSE  LIFT_Complete_Document.docx  LIFT_Guide.md  LIFT_Manual.md  LIFT_design.md  Lift_Plan.md  MANUAL.md  README.md  create.md  update.md
crates/lift-ast/: Cargo.toml
crates/lift-ast/src/: ast.rs  builder.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/lift-cli/: Cargo.toml
crates/lift-cli/src/: main.rs
crates/lift-codegen/: Cargo.toml
crates/lift-codegen/src/: main.rs
crates/lift-config/: Cargo.toml
crates/lift-config/src/: lib.rs  parser.rs  types.rs
crates/lift-core/: Cargo.toml
crates/lift-core/src/: attributes.rs  blocks.rs  context.rs  dialect.rs  functions.rs  interning.rs  lib.rs  location.rs  model_builder.rs  module.rs  operations.rs  pass.rs  printer.rs  regions.rs  types.rs  values.rs  verifier.rs
crates/lift-export/: Cargo.toml
crates/lift-export/src/: lib.rs  llvm.rs  onnx.rs  qasm_export.rs
crates/lift-hybrid/: Cargo.toml
crates/lift-hybrid/src/: dialect.rs  encoding.rs  gradient.rs  lib.rs  ops.rs
crates/lift-import/: Cargo.toml
crates/lift-import/src/: lib.rs  onnx.rs  pytorch.rs  qasm.rs
crates/lift-opt/: Cargo.toml
crates/lift-opt/src/: canonicalize.rs  common_subexpr.rs  constant_fold.rs  dce.rs  flash_attention.rs  gate_cancel.rs  layout_mapping.rs  lib.rs  noise_aware_schedule.rs  quantisation_pass.rs  rotation_merge.rs  tensor_fusion.rs
crates/lift-predict/: Cargo.toml
crates/lift-predict/src/: budget.rs  lib.rs  roofline.rs
crates/lift-quantum/: Cargo.toml
crates/lift-quantum/src/: dialect.rs  gates.rs  kraus.rs  lib.rs  noise.rs  qec.rs  topology.rs  types.rs
crates/lift-sim/: Cargo.toml
crates/lift-sim/src/: analysis.rs  cost.rs  lib.rs  quantum_sim.rs
crates/lift-tensor/: Cargo.toml
crates/lift-tensor/src/: dialect.rs  lib.rs  ops.rs  shape.rs  types.rs
crates/lift-tests/tests/: test_edge_cases.rs  test_encoding_extended.rs  test_final_coverage.rs  test_hybrid_extended.rs  test_opt_extended.rs  test_predicates_and_coverage.rs  test_quantum_extended.rs  test_tensor_extended.rs
examples/: attention.lif  config.lith  generated_optimize.lith  mlp_generated.lif  mlp_generated.ll  mlp_generated.onnx  phi3_generated.lif  phi3_generated.ll  phi3_generated.onnx  quantum_bell.lif  resnet_generated.lif  resnet_generated.ll  resnet_generated.onnx  tensor_mlp.lif  validate_all.sh  vqe_generated.lif  vqe_generated.ll  vqe_generated.onnx  vqe_generated.qasm
lift-test/: Cargo.toml  README.md
lift-test/examples/: cnn_encoder.lif  hybrid_config.lith  quantum_vqc.lif
lift-test/src/: ir_builder.rs  lib.rs  main.rs  report.rs  step1_parse.rs  step2_analyse.rs  step3_optimise.rs  step4_predict.rs  step5_export.rs  step6_feedback.rs
