[workspace]
resolver = "2"
members = [
    "crates/lift-core",
    "crates/lift-ast",
    "crates/lift-tensor",
    "crates/lift-quantum",
    "crates/lift-hybrid",
    "crates/lift-sim",
    "crates/lift-predict",
    "crates/lift-opt",
    "crates/lift-import",
    "crates/lift-export",
    "crates/lift-config",
    "crates/lift-cli",
    "crates/lift-tests",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["LIFT Framework Contributors"]
repository = "https://github.com/lift-framework/lift"
description = "LIFT — Language for Intelligent Frameworks and Technologies: Unified IR for AI and Quantum Computing"

[workspace.dependencies]
# Internal crates
lift-core = { path = "crates/lift-core", version = "0.2.1" }
lift-ast = { path = "crates/lift-ast", version = "0.2.1" }
lift-tensor = { path = "crates/lift-tensor", version = "0.2.1" }
lift-quantum = { path = "crates/lift-quantum", version = "0.2.1" }
lift-hybrid = { path = "crates/lift-hybrid", version = "0.2.1" }
lift-sim = { path = "crates/lift-sim", version = "0.2.1" }
lift-predict = { path = "crates/lift-predict", version = "0.2.1" }
lift-opt = { path = "crates/lift-opt", version = "0.2.1" }
lift-import = { path = "crates/lift-import", version = "0.2.1" }
lift-export = { path = "crates/lift-export", version = "0.2.1" }
lift-config = { path = "crates/lift-config", version = "0.2.1" }

# External dependencies
slotmap = { version = "1.0", features = ["serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
opt-level = 3
lto = "thin"
