[package]
name = "lift-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Integration test: Hybrid AI+Quantum medical imaging classification with LIFT"

[dependencies]
lift-core = { workspace = true }
lift-ast = { workspace = true }
lift-tensor = { workspace = true }
lift-quantum = { workspace = true }
lift-hybrid = { workspace = true }
lift-sim = { workspace = true }
lift-predict = { workspace = true }
lift-opt = { workspace = true }
lift-import = { workspace = true }
lift-export = { workspace = true }
lift-config = { workspace = true }
serde_json = { workspace = true }
