[package]
name = "lift-ast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "LIFT-AST: Lexer, parser, and AST for the .lif source language"
keywords = ["compiler", "parser", "lexer", "ast", "ir"]
categories = ["compilers", "parsing"]

[dependencies]
lift-core = { workspace = true }
thiserror = { workspace = true }
