[package]
name = "lift-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "LIFT CLI: Command-line interface — verify, analyse, print, compile, simulate, predict"
keywords = ["cli", "compiler", "ir", "quantum", "deep-learning"]
categories = ["compilers", "command-line-utilities"]

[dependencies]
lift-core = { workspace = true }
lift-ast = { workspace = true }
lift-tensor = { workspace = true }
lift-quantum = { workspace = true }
lift-hybrid = { workspace = true }
lift-sim = { workspace = true }
lift-predict = { workspace = true }
lift-opt = { workspace = true }
lift-config = { workspace = true }
lift-export = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
