[package]
name = "lift-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LIFT-CORE: SSA IR foundation — types, values, operations, blocks, regions, verifier"

[dependencies]
slotmap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
