[package]
name = "lift-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "LIFT-CORE: SSA IR foundation — types, values, operations, blocks, regions, verifier"
keywords = ["compiler", "ir", "ssa", "type-system", "quantum"]
categories = ["compilers", "science"]

[dependencies]
slotmap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
