[package]
name = "lift-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "LIFT-EXPORT: Backends — LLVM IR, ONNX (opset 21), OpenQASM 3, CUDA PTX (planned), XLA (planned)"
keywords = ["export", "llvm", "qasm", "backend", "compiler"]
categories = ["compilers", "science"]

[dependencies]
lift-core = { workspace = true }
lift-tensor = { workspace = true }
lift-quantum = { workspace = true }
thiserror = { workspace = true }
