[package]
name = "lift-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "LIFT-IMPORT: Importers — PyTorch FX, ONNX, Qiskit, OpenQASM 3"
keywords = ["import", "onnx", "pytorch", "qasm", "compiler"]
categories = ["compilers", "science"]

[dependencies]
lift-core = { workspace = true }
lift-tensor = { workspace = true }
lift-quantum = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
