[package]
name = "lift-predict"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LIFT-PREDICT: Performance prediction engine — analytical roofline model, budget enforcement"

[dependencies]
lift-core = { workspace = true }
lift-tensor = { workspace = true }
lift-quantum = { workspace = true }
lift-sim = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
