[package]
name = "lift-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LIFT-SIM: Static analysis engine — shape propagation, FLOP counting, memory analysis, noise simulation"

[dependencies]
lift-core = { workspace = true }
lift-tensor = { workspace = true }
lift-quantum = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
