[package]
name = "lift-tensor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "LIFT-TENSOR: AI dialect — tensor types, attention, KV cache, MoE, quantisation"
keywords = ["tensor", "deep-learning", "attention", "compiler", "ir"]
categories = ["compilers", "science"]

[dependencies]
lift-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
